--- a/style.css
+++ b/style.css
@@ -1,28 +1,122 @@
 * {
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-nav ul {
+body {
+  margin: 0;
+}
+
+.container {
+  /*задать ширину и выровнять по середине*/
+  max-width: 900px;
+  margin: 0 auto;
+}
+.row {
+  /*строка*/
   display: flex;
-  list-style-type: none;
-  justify-content:space-evenly;
+  flex-wrap: wrap;
 }
-nav ul li a {
+[class^="col"] {
+  padding: 0 10px;
+}
+
+.col-4 {
+  /* 100% / 12 * 4 */
+  flex-basis: 33.3%;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+.col-3 {
+  flex-basis: 25%;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+.col-6 {
+  flex-basis: 16.6%;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+.col-12 {
+  flex: 100% 0 0;
+}
+.col-1 {
+  flex: 8.3% 0 0;
+}
+.col-2 {
+  flex: 16.6% 0 0;
+}
+.col-5 {
+  flex: 41.6% 0 0;
+}
+.col-6 {
+  flex: 50% 0 0;
+}
+.col-7 {
+  flex: 58.3% 0 0;
+}
+.col-8 {
+  flex: 66.6% 0 0;
+}
+.col-9 {
+  flex: 75% 0 0;
+}
+.col-10 {
+  flex: 83% 0 0;
+}
+.col-11 {
+  flex: 91.6% 0 0;
+}
+
+.card {
+  background-color: white;
+  border: 2px solid black;
+  box-shadow: 0 0 10px 5px rgb(16, 15, 15);
+  margin-bottom: 20px;
+}
+.card .card-image {
+  width: 100%;
+}
+.card .card-content {
+  padding: 10px 15px;
+}
+.card.card-horizontal {
+  display: flex;
+}
+.card.card-horizontal .card-image {
+  width: 30%;
+}
+.topbar {
+  background-color: white;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.4);
+  padding: 20px 15px;
+
+  display: flex;
+}
+
+
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.nav .nav-link {
+  color: rgb(6, 6, 6);
+  padding: 10px 15px;
   text-decoration: none;
-  font-size: 15px;
-  color: black;
-  margin-top: 40px;
+  border-radius: 10px;
+
+  display: block;
 }
-nav ul li button {
-  background-color: rgba(111, 44, 255, 1);
-  border-radius: 20px;
-  border-color: rgba(111, 44, 255, 1);
-  width: 157px;
-  height: 40px;
+.nav  .nav-link:hover {
+  color: rgb(8, 45, 113);
+}
+.nav .nav-link.active {
   color: white;
-}
-header {
-  width: 1440px;
-  height: 755px;
+  background-color: coral;
 }
 
