--- a/style.css
+++ b/style.css
@@ -91,12 +91,12 @@ body {
 }
 
 nav {
-display: flex;
+  display: flex;
 }
 .nav {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -109,10 +109,13 @@ display: flex;
   border-radius: 10px;
   font-size: 14px;
   display: block;
+  margin-top: 10px;
 }
 nav img {
+  margin-top: 10px;
   margin-right: auto;
   width: 4vw;
+  height: 3vh;
   margin-left: 20px;
 }
 .nav-button {
@@ -122,7 +125,7 @@ nav img {
   padding: 10px 25px;
   border-color: blueviolet;
   font-size: 12px;
-  margin-right: 40px ;
+  margin-right: 40px;
   color: white;
 }
 .nav-linking {
@@ -131,15 +134,40 @@ nav img {
   margin-right: 50px;
   margin-top: 10px;
   color: black;
-
 }
 .head {
-  margin-top:2vh ;
-  padding-top: 30vh;
+  margin-top: 2vh;
+  padding-top: 20vh;
   padding-left: 10vw;
-  padding-bottom: 30vh;
+  padding-bottom: 35vh;
   background-image: url(./images/bg1.jpg);
 }
-
-
-
+.head span {
+  font-size: 14px;
+  font-weight: 400;
+}
+.head h1 {
+  margin: 0;
+  margin-top: 10px;
+  font-weight: 700;
+  font-size: 54px;
+}
+.head #h1 {
+  margin: 0;
+  color: blue;
+}
+.head p {
+  font-size: 16px;
+  font-weight: 400;
+}
+.head-button {
+padding: 10px 10px;
+}
+#head-button-left {
+  background-color: white;
+  margin: 0;
+}
+#head-button-right {
+  background-color: blueviolet;
+  margin: 0;
+}
