--- a/style.css
+++ b/style.css
@@ -122,8 +122,8 @@ nav img {
   margin-left: auto;
   background-color: blueviolet;
   border-radius: 30px;
-  padding: 10px 25px;
-  border-color: blueviolet;
+  padding: 10px 20px;
+  border: none;
   font-size: 12px;
   margin-right: 40px;
   color: white;
@@ -161,13 +161,25 @@ nav img {
   font-weight: 400;
 }
 .head-button {
-padding: 10px 10px;
+  padding: 10px 10px;
 }
 #head-button-left {
   background-color: white;
   margin: 0;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  padding: 10px 15px;
+  padding-right: 10vw;
+  border: none;
+  color: rgba(0, 0, 0, 0.27);
 }
 #head-button-right {
+  padding: 10px 25px;
   background-color: blueviolet;
   margin: 0;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  border: none;
+  color: white;
+  margin-left: -5px;
 }
