added section content

--- a/style.css
+++ b/style.css
@@ -120,7 +120,8 @@ nav img {
 }
 .nav-button {
   margin-left: auto;
-  background-color: blueviolet;
+  background-color: rgba(111, 44, 255, 1);
+  
   border-radius: 30px;
   padding: 10px 20px;
   border: none;
@@ -154,7 +155,8 @@ nav img {
 }
 .head #h1 {
   margin: 0;
-  color: blue;
+  color:  rgba(111, 44, 255, 1);
+  
 }
 .head p {
   font-size: 16px;
@@ -175,7 +177,8 @@ nav img {
 }
 #head-button-right {
   padding: 10px 25px;
-  background-color: blueviolet;
+  background-color: rgba(111, 44, 255, 1);
+  
   margin: 0;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
