--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 * {
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
 }
 
 body {
   margin: 0;
+  background-color: white;
+  color: rgb(0, 0, 0, 1);
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -121,7 +123,7 @@ nav img {
 .nav-button {
   margin-left: auto;
   background-color: rgba(111, 44, 255, 1);
-  
+
   border-radius: 25px;
   padding: 10px 40px;
   border: none;
@@ -155,8 +157,7 @@ nav img {
 }
 .head #h1 {
   margin: 0;
-  color:  rgba(111, 44, 255, 1);
-  
+  color: rgba(111, 44, 255, 1);
 }
 .head p {
   font-size: 16px;
@@ -178,7 +179,7 @@ nav img {
 #head-button-right {
   padding: 10px 25px;
   background-color: rgba(111, 44, 255, 1);
-  
+
   margin: 0;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
@@ -203,19 +204,19 @@ nav img {
   font-size: 16px;
   font-weight: 700;
   border-bottom: 3px solid rgba(111, 44, 255, 1);
-  
 }
 .section2 {
   display: flex;
   margin: 108px 182px 94px 70px;
 }
-.row{
+.row {
   flex-direction: column;
   border-left: 1px solid rgba(0, 0, 0, 0.31);
   padding-right: 3vw;
 }
 .section2-content-left-side {
   width: 50%;
+  padding-top: 25vh;
 }
 .section2-content-left-side h1 {
   font-size: 40px;
@@ -227,10 +228,18 @@ nav img {
   margin-bottom: 56px;
   margin-top: 50px;
 }
-.section2-content-left-side 
+.section2 p {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+}
+.section2-content-left-side #p {
+  display: inline;
+  border-bottom: 1px solid rgb(18, 18, 18);
+}
 #inside-left-side button {
   background-color: rgba(111, 44, 255, 1);
-  
+
   border-radius: 30px;
   padding: 10px 40px;
   border: none;
@@ -242,4 +251,22 @@ nav img {
   font-size: 16px;
   font-weight: 700;
   border-bottom: 3px solid rgba(111, 44, 255, 1);
+}
+.col-4 h1 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.section3 h1 {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+}
+.section3 p {
+  text-align: center;
+}
+.section3 .container .row {
+  display: flex;
+  flex-direction: row;
+  border: none;
 }
