--- a/style.css
+++ b/style.css
@@ -72,12 +72,12 @@ body {
 
 .card {
   background-color: white;
-  border: 2px solid black;
-  box-shadow: 0 0 10px 5px rgb(16, 15, 15);
+  border: 2px solid rgb(240, 240, 240);
+  box-shadow: 0 0 10px 5px rgba(16, 15, 15, 0.637);
   margin-bottom: 20px;
 }
 .card .card-image {
-  width: 100%;
+  width: 80%;
 }
 .card .card-content {
   padding: 10px 15px;
@@ -86,7 +86,7 @@ body {
   display: flex;
 }
 .card.card-horizontal .card-image {
-  width: 50%;
+  width: 30%;
 }
 .topbar {
   background-color: white;
@@ -339,3 +339,40 @@ nav img {
   flex-wrap: wrap;
   border: none;
 }
+.section6 {
+  background-color: rgba(245, 245, 245, 1);
+}
+.section6 h1 {
+  text-align: center;
+  font-size: 40px;
+  padding-top: 10vh;
+}
+.section6 .container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10vh;
+  padding-bottom: 10vh;
+  margin-left: 20vw;
+}
+.section6 .container .card {
+  max-width: 250px;
+  margin-right: 3vw;
+  border-radius: 10px;
+}
+.section6 .image1 {
+  max-height: 10vh;
+  margin: 0;
+  margin-top: 17vh;
+}
+.section6 .card-content p {
+  text-align: center;
+  color: rgba(111, 44, 255, 1);
+  padding-bottom: 20px;
+}
+.section6 .card-content img {
+  margin-left: 5vw;
+}
+.section6 .card-image img {
+  max-width: 250px;
+}
+
