--- a/style.css
+++ b/style.css
@@ -415,3 +415,30 @@ nav img {
   font-size: 13px;
   border-bottom: 2px solid rgba(255, 255, 255, 1) ;
 }
+.section8 {
+  display: flex;
+  background-color: rgba(245, 245, 245, 1);
+}
+.section8-content {
+  margin-left: 3vw;
+  margin-right: 5vw;
+}
+.section8-content h1 {
+font-size: 40px;
+font-weight: 700;
+color: rgba(23, 0, 46, 1);
+margin-top: 30vh ;
+}
+.section8-content p {
+  font-size: 13px;
+  font-weight: 400;
+  margin-bottom: 5vh;
+}
+.section8-content button {
+  border: none;
+  background-color: rgba(111, 44, 255, 1);
+  color: white;
+  font-size: 15px;
+  padding: 10px 18px;
+  border-radius: 20px;
+}
