added styles section9

--- a/style.css
+++ b/style.css
@@ -442,3 +442,39 @@ margin-top: 30vh ;
   padding: 10px 18px;
   border-radius: 20px;
 }
+.section9 {
+  background-image: url(./images/Rectanglesection9-bg.jpg);
+  background-repeat:repeat-x;
+}
+.section9 h1 {
+  padding-top: 15vh;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  color: white;
+}
+.section9-button {
+  padding: 10px 10px;
+  padding-bottom: 15vh;
+}
+#section9-button-left {
+  background-color: white;
+  margin: 0;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  padding: 10px 15px;
+  padding-right: 10vw;
+  border: none;
+  color: rgba(0, 0, 0, 0.27);
+  margin-left: 35vw;
+}
+#section9-button-right {
+  padding: 10px 25px;
+  background-color: rgba(111, 44, 255, 1);
+  margin: 0;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  border: none;
+  color: white;
+  margin-left: -5px;
+}
