--- a/style.css
+++ b/style.css
@@ -478,3 +478,20 @@ margin-top: 30vh ;
   color: white;
   margin-left: -5px;
 }
+.section10 .img1 {
+  margin-left: 45vw;
+}
+.section10 p {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(28, 28, 28, 1);
+  margin: 10vh 0;
+}
+.section10-icons {
+  display: flex;
+  margin-left: 40vw;
+}
+.section10-icons img {
+  margin-left: 2vw;
+}
