--- a/style.css
+++ b/style.css
@@ -123,19 +123,19 @@ nav img {
 .nav-button {
   margin-left: auto;
   background-color: rgba(111, 44, 255, 1);
-
   border-radius: 25px;
   padding: 10px 40px;
   border: none;
   font-size: 12px;
   margin-right: 40px;
   color: white;
+  margin-top: 10px;
 }
 .nav-linking {
   text-decoration: none;
   font-size: 15px;
   margin-right: 50px;
-  margin-top: 10px;
+  margin-top: 20px;
   color: black;
 }
 .head {
@@ -494,4 +494,87 @@ margin-top: 30vh ;
 }
 .section10-icons img {
   margin-left: 2vw;
+}
+footer {
+  background-color: rgba(32, 0, 60, 1);
+  color: rgba(255, 255, 255, 1);
+  margin-top: 20vh;
+}
+footer .container .content {
+  display: flex;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+footer .container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+footer .container .content ul {
+  list-style-type: none;
+}
+footer .container .content ul li a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 1) ;
+}
+.footer-content ul li a {
+  font-size: 14px;
+  font-weight: 400;
+}
+.footer-content ul li {
+  padding: 7px 10px;
+}
+.footer-content h3 {
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+}
+footer .featured1 {
+  display: flex;
+}
+.featured {
+  max-width: 400px;
+  margin-right: 3vw;
+}
+.products {
+  max-width: 350px;
+  margin-right: 3vw;
+}
+.recources {
+  max-width: 350px;
+  margin-right: 3vw;
+}
+.company {
+  max-width: 350px;
+  margin-right: 3vw;
+}
+.working {
+  max-width: 350px;
+  margin-right: 3vw;
+}
+.working h3 {
+  font-weight: 400;
+}
+.footer-from-below {
+  display: flex;
+  padding-bottom: 10vh;
+}
+.footer-from-below img {
+  max-width: 150px ;
+}
+.footer-logo {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer-logo img {
+  max-width: 100px;
+  margin-left: 4vw;
+}
+.footer-logo span {
+  padding: 10px 20px;
+  font-size: 13px;
+  font-weight: 40o;
 }
